upgrade dependencies and add github stuff